package entity.language;

public interface SyllableCalculator
{
    int calculate(String word);
}
